:sparkles: Update gc daemon task page
