# pkg/handlers/apidocs/swagger.json
@@ -5919,6 +5919,22 @@
                     "type": "string",
                     "example": "0 0 * * *"
                 },
+                "retention_pattern": {
+                    "type": "string",
+                    "example": "v*,1.*"
+                },
+                "retention_rule_amount": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "retention_rule_type": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/enums.RetentionRuleType"
+                        }
+                    ],
+                    "example": "Day"
+                },
                 "updated_at": {
                     "type": "string",
                     "example": "2006-01-02 15:04:05"
@@ -7017,7 +7033,6 @@
         "types.UpdateGcTagRuleRequest": {
             "type": "object",
             "required": [
-                "cron_enabled",
                 "namespace_id"
             ],
             "properties": {
@@ -7039,6 +7054,8 @@
                 },
                 "retention_rule_amount": {
                     "type": "integer",
+                    "maximum": 180,
+                    "minimum": 1,
                     "example": 1
                 },
                 "retention_rule_type": {
